--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.1",
     "axios": "^1.5.1",
     "core-js": "^3.8.3",
     "tailwindcss": "^3.3.3",
